--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@ant-design/icons": "^5.6.1",
     "antd": "^5.24.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
